k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mec-app
  namespace: mec
  labels:
    app: mec-app
spec:
  selector:
    app: mec-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
